[package]
name = "spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
id3 = "1.7.0"
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
axum = { version = "0.6.18", features = ["headers", "macros"] }
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
chrono = "0.4.24"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
